<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".activities.FormActivity">

    <TextView
        android:id="@+id/tv_form_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_fm_title" />

    <EditText
        android:id="@+id/et_form_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_box"
        android:padding="8dp"
        android:layout_below="@id/tv_form_name" />

    <TextView
        android:id="@+id/tv_form_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_form_name"
        android:text="@string/tv_fm_description" />

    <EditText
        android:id="@+id/et_form_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_box"
        android:padding="8dp"
        android:layout_below="@+id/tv_form_description"
        android:maxLength="75"/>

    <TextView
        android:id="@+id/tv_form_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_form_description"
        android:text="@string/tv_fm_price" />

    <EditText
        android:id="@+id/et_form_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_box"
        android:padding="8dp"
        android:layout_below="@+id/tv_form_price"
        android:inputType="numberDecimal" />

    <LinearLayout
        android:id="@+id/buttonsLayoutForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_form_price"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_form_update"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="2.5dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="#088DA5"
            android:text="@string/btn_fm_update" />

        <Button
            android:id="@+id/btn_form_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="2.5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="#088DA5"
            android:text="@string/btn_fm_delete" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_form_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_form_price"
        android:layout_alignParentStart="true"
        android:layout_margin="5dp"
        android:text="@string/btn_fm_add"
        android:visibility="gone" />

</RelativeLayout>
