<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="9dp"
    app:cardElevation="15dp"
    android:backgroundTint="#FFFFFF"
    android:layout_margin="5dp">

    <LinearLayout android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="80dp"
        android:orientation="horizontal"

        android:gravity="bottom">

        <ImageView
            android:contentDescription="@string/image_description"
            android:id="@+id/iv_item_pic"
            android:layout_marginEnd="15dp"
            android:src="@drawable/image1"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_item_title"
                android:text="@string/item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tv_item_description"
                android:text="@string/image_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_item_price"
                android:text="@string/item_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <Button
            android:id="@+id/item_edit"
            android:backgroundTint="#088DA5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_text" />


    </LinearLayout>

</androidx.cardview.widget.CardView>